--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,13 +1,10 @@
 {
   "name": "sheldon",  // Project name
+  "main": "worker.js",
   "compatibility_date": "2026-02-19",
 
-  "build": {
-    "command": ""     // No build step needed
-  },
-
-  "site": {
-    "bucket": "./",    // Serve all files from project root
-    "entry-point": "." // Root folder
+  "assets": {
+    "directory": "./",
+    "binding": "ASSETS"
   }
 }
