--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,7 @@
 name = "sheldon"
+main = "worker.js"
 compatibility_date = "2026-02-19"
 
-[build]
-command = ""       # No build command needed
-[site]
-bucket = "./"      # Serve files directly from project root
-entry-point = "."  # Root folder
+[assets]
+directory = "./"
+binding = "ASSETS"
